# Interactive-Scene-Reconstruction

./: .gitignore  .gitmodules  INSTALL.md  LICENSE  README.md  dependency_https.rosinstall  dependency_ssh.rosinstall  requirements.txt  run_exp.sh  wstool_setup_https.sh  wstool_setup_ssh.sh
assets/: EVALUATION.md  INSTALL.md  all_result_76.json  all_result_raw.json
cad_replacement/: README.md
cad_replacement/map_proc/: CMakeLists.txt  map_proc_https.rosinstall  map_proc_ssh.rosinstall  package.xml
cad_replacement/map_proc/cfg/: eval.yaml
cad_replacement/map_proc/deprecated/: LM_test.cpp  collision_test.cpp  extract_seg.launch  extract_seg_from_gt.cpp  publish_mesh_node.cpp
cad_replacement/map_proc/include/: collision_check.h  common.h  eval_node.h  io.h  levenberg_marquardt.h  map_processing_node.h  object_cad.h  utils.h  visualization.h
cad_replacement/map_proc/launch/: eval.launch  map_processing.launch
cad_replacement/map_proc/src/: collision_check.cc  eval_node.cpp  map_processing_node.cpp  object_cad.cc  utils.cc  visualization.cc
cad_replacement/pg_map_ros/pg_map_ros/: .gitignore  CMakeLists.txt  Makefile  README.md  package.xml
cad_replacement/pg_map_ros/pg_map_ros/include/pg_map_ros/: concept_node.h  node_base.h  node_type.h  nodes.h  object_node.h  pair_hash.h  parse_graph_map.h  pg_edge.h  pgm_error.h  tcp_client.h
cad_replacement/pg_map_ros/pg_map_ros/pg_viewer/: launch_viewer.py  pg_parser.py  pg_viewer.py  pg_viewer_server.py  tcp_server.py
cad_replacement/pg_map_ros/pg_map_ros/src/: concept_node.cpp  node_base.cpp  node_type.cpp  object_node.cpp  parse_graph_map.cpp  pg_edge.cpp  pgm_error.cpp  tcp_client.cpp
cad_replacement/pg_map_ros/pg_map_ros/tests/: annotate_cg.cpp  test_map_builder.cpp  test_nodes.cpp  test_socket_client.cpp
cad_replacement/pg_map_ros/pkg_test_ros/: CMakeLists.txt  package.xml
cad_replacement/pg_map_ros/pkg_test_ros/include/pkg_test_ros/: test_pg_map.h
cad_replacement/pg_map_ros/pkg_test_ros/launch/: pg_map_testing.launch
cad_replacement/pg_map_ros/pkg_test_ros/src/: test_pg_map_node.cpp
interactive_scene/: README.md
interactive_scene/gazebo_simulation/gazebo_simulation/: CMakeLists.txt  README.md  package.xml
interactive_scene/gazebo_simulation/gazebo_simulation/launch/: fetchbot_teleop.launch  gazebo_world.launch
interactive_scene/gazebo_simulation/gazebo_simulation/rviz/: gazebo_robot_state.rviz
interactive_scene/gazebo_simulation/robot_description/husky_description/urdf/: decorations.urdf.xacro  husky.urdf.xacro
interactive_scene/gazebo_simulation/robot_description/husky_ur_description/: CMakeLists.txt  package.xml
interactive_scene/gazebo_simulation/robot_description/husky_ur_description/meshes/: dual_arm_bulkhead.dae  dual_arm_bulkhead_collision.stl
interactive_scene/gazebo_simulation/robot_description/husky_ur_description/scripts/: setup_husky_dual_ur3_e_envar  setup_husky_dual_ur3_envar  setup_husky_dual_ur5_e_envar  setup_husky_dual_ur5_envar  setup_husky_ur3_e_envar  setup_husky_ur3_envar  setup_husky_ur5_e_envar  setup_husky_ur5_envar
interactive_scene/gazebo_simulation/robot_description/husky_ur_description/urdf/: deploy_husky_ur5e.urdf.xacro  husky_dual_ur3_description.urdf.xacro  husky_dual_ur3_e_description.urdf.xacro  husky_dual_ur5_description.urdf.xacro  husky_dual_ur5_e_description.urdf.xacro  husky_ur3_description.urdf.xacro  husky_ur3_e_description.urdf.xacro  husky_ur5_description.urdf.xacro  husky_ur5_e_description.urdf.xacro
interactive_scene/gazebo_simulation/robot_description/ur_e_description/urdf/: ur5e.urdf.xacro
interactive_scene/scene_builder/: CMakeLists.txt  README.md  package.xml  requirements.txt
interactive_scene/scene_builder/launch/: generate_gazebo_world.launch  generate_xacro_scene.launch  view_object.launch  view_robot_scene.launch  view_scene.launch  view_world.launch
interactive_scene/scene_builder/rviz/: view_object.rviz  view_scene.rviz  view_world.rviz
interactive_scene/scene_builder/scripts/: db_loader.py  global_settings.py  lookup_db.py  mesh_object.py  meshlab_server.py  obj_type.py  parse_graph.py  ros_build_xacro_scene.py  ros_generate_gazebo_world.py  scene_builder_config.py  transformation.py  utils.py  xacro_ros.py  xacro_scene.py  xacro_scene_builder.py
interactive_scene/scene_builder/scripts/deprecated/: meshlab_server.py
mapping/: README.md
mapping/panoptic_mapping_pipeline/: CMakeLists.txt  package.xml
mapping/panoptic_mapping_pipeline/cfg/: pano_class.yaml
mapping/panoptic_mapping_pipeline/launch/: kinect2_dense_mapping.launch  kinect2_mapping.launch  kinect2_pano_mapping.launch  scenenn_mapping.launch  scenenn_pano_mapping.launch  vrep_dense_mapping.launch  vrep_mapping.launch  vrep_pano_mapping.launch
mapping/rp_server/: .gitignore  README.md  coco_pano_class.json  launch_detectron_server.py  setup.py
mapping/rp_server/rp_server/: __init__.py  detectron_server.py  tcp_client.py  utils.py
segmentation/: launch_detectron_server.py
segmentation/rp_server/: Makefile  README.md
segmentation/rp_server/rp_server/: detectron_wrapper.py  tcp_server.py
