<?xml version="1.0"?>
<package format="2">
  <name>husky_ur_description</name>
  <version>0.0.0</version>
  <description>The husky_ur_description package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_e_description</exec_depend>
  <exec_depend>husky_description</exec_depend>
</package>
